--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,8 @@ body {
     border: none;
 }
 
-.btn-orange:hover {
+.btn-orange:hover,
+.btn-orange:focus {
     background-color: #e65c00;
     color: #fff;
 }
@@ -76,6 +77,10 @@ body {
 }
 
 .footer a {
+    color: #ff6600 !important;
+}
+
+.text-orange {
     color: #ff6600 !important;
 }
 
